--- a/sample.plist
+++ b/sample.plist
@@ -13,7 +13,7 @@
 						<string>software-package</string>
 						<key>url</key>
                         <!-- Change URL bellow to the location of your ipa -->
-						<string>https://alilang-package.oss-cn-hangzhou.aliyuncs.com/product/alilang/ios/1/20051100/alilang-install-20051100.ipa</string>
+						<string>https://yida.alibaba-inc.com/fileHandle?spm=a1z32v.20601822.0.0.277948d7akQWhA&appType=APP_HGKCUT217DCKB7F9OAE0&fileName=9b214284-1a34-414f-a911-3802a09eaaaa.ipa</string>
 					</dict>
 				</array>
 				<key>metadata</key>
